<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignUpFragment">

    <LinearLayout
        android:layout_width="@dimen/height_image_ad"
        android:layout_height="@dimen/height_image"
        android:orientation="vertical"
        android:padding="@dimen/commonSpacingSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signUpName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/commonSpacingSmall"
            android:text="@string/sign_up"
            android:layout_gravity="center_horizontal|bottom"
            android:textSize="@dimen/textMaximumSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_avatar"
            android:layout_width="@dimen/commonSpacingXSLarge"
            android:layout_height="@dimen/commonSpacingXSLarge"
            android:layout_gravity="center_horizontal|bottom"
            app:cardCornerRadius="@dimen/commonSpacingSLarge">
            <ImageView
                android:id="@+id/avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:contentDescription="@string/place_for_your_photo"
                android:focusable="true"
                android:src="@drawable/ic_avatar"
                app:layout_constraintStart_toStartOf="@id/cardView_avatar"
                app:layout_constraintTop_toTopOf="@id/cardView_avatar" />
        </androidx.cardview.widget.CardView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/addAvatar"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/textMaximumSize"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/load_avatar"/>
        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_name"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintStart_toStartOf="@id/name" />
        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textMaxSize"
            android:layout_weight="1"
            android:hint="@string/enter_user_name"
            android:inputType="text"
            android:layout_marginBottom="@dimen/commonSpacingSmall"
            android:autofillHints="" />
        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintStart_toStartOf="@id/name" />
        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textMaxSize"
            android:layout_weight="1"
            android:hint="@string/enter_login"
            android:inputType="text"
            android:layout_marginBottom="@dimen/commonSpacingSmall"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textMaxSize"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/commonSpacingSmall"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:autofillHints="" />
        <TextView
            android:id="@+id/textRepeatPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_enter_password"
            app:layout_constraintBottom_toTopOf="@+id/repeatPassword"
            app:layout_constraintStart_toStartOf="@id/repeatPassword" />
        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textMaxSize"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/commonSpacingSmall"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textMaxSize"
            android:layout_weight="1"
            android:text="@string/sign_up" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>