<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignInFragment">

    <LinearLayout
        android:layout_width="@dimen/height_image_ad"
        android:layout_height="@dimen/height_image"
        android:orientation="vertical"
        android:padding="@dimen/commonSpacingSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/signInName"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/commonSpacingSmall"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textSize="@dimen/textMaximumSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintStart_toStartOf="@+id/login" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textMaxSize"
            android:layout_weight="1"
            android:hint="@string/enter_login"
            android:inputType="text"
            android:layout_marginBottom="@dimen/commonSpacingSmall"/>
        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginBottom="@dimen/commonSpacingSmall"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textMaxSize"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/commonSpacingSmall"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textMaxSize"
            android:layout_weight="1"
            android:text="@string/sign_in" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/do_not_have_an_account"
            android:gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/go_to_register_page"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textMaxSize"
            android:layout_weight="1"
            android:text="@string/go_to_register_page" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>