<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/commonSpacingSmall">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/postAvatarSize"
        android:layout_height="@dimen/postAvatarSize"
        android:layout_marginBottom="@dimen/commonSpacingMedium"
        android:contentDescription="@string/avatar_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_avatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/commonSpacingMedium"
        android:layout_marginEnd="@dimen/commonSpacingMedium"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/user_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/commonSpacingMedium"
            android:contentDescription="@string/like"
            android:src="@drawable/ic_liked_24"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/speaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/commonSpacingMedium"
            android:contentDescription="@string/speakers"
            android:src="@drawable/ic_speaker"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/_light_blue" />

        <ImageView
            android:id="@+id/mention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/commonSpacingMedium"
            android:contentDescription="@string/mentions"
            android:src="@drawable/ic_mention"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/_light_blue" />

        <ImageView
            android:id="@+id/participate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/commonSpacingMedium"
            android:contentDescription="@string/participants"
            android:src="@drawable/ic_participated"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/_light_blue" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>